final project proposal

--- a/src/content/docs/homeworks/final project proposal.mdx
+++ b/src/content/docs/homeworks/final project proposal.mdx
@@ -1,8 +1,8 @@
 ---
-tentative: true
+tentative: false
 title: Final Project checkpoint 0
 description: Form a group and come up with an idea
-form_url: https://forms.gle/8GUcdZcUf9jrcX6W9
+form_url: https://forms.gle/hhP6cm4Zw2aup1J68
 sidebar:
   order: 20
 relative_release:
@@ -118,7 +118,7 @@ without spending much / any money on hosting/services.
 
 The two deliverables are your repository (it can be empty, but you can also get
 started on it if you want), and submitting [This
-form](https://forms.gle/8GUcdZcUf9jrcX6W9). Remember that this assignment is not
+form](https://forms.gle/hhP6cm4Zw2aup1J68). Remember that this assignment is not
 worth any points, but if you don't get started finding a good project idea, I
 will be grading your later checkpoints based on my personal opinion rather than
 the expectations that we set together.
