kickoff video and ta email update

--- a/src/content/docs/homeworks/homework 1.mdx
+++ b/src/content/docs/homeworks/homework 1.mdx
@@ -5,7 +5,7 @@ description: Hono + SQLite + Cloudfare Workers
 sidebar:
   order: 31
 notes: >-
-  Watch [the kickoff video](https://www.example.com) for help getting
+  Watch [the kickoff video](https://www.youtube.com/watch?v=SGqbpD6BJOo) for help getting
   started.
 relative_release:
   week: 2
@@ -48,7 +48,6 @@ the client. To get all of the dependencies ready to go, you'll need to run `npm
 install` within the directory. The install script will probably prompt you to do
 a _database migration_ - this is normal and you just need to hit "y" to
 continue. After that, you should be ready to start developing.
-
 
 ## Project structure
 
@@ -99,7 +98,7 @@ you are able to achieve the following goals:
   later returns to play around with the counter. Last saved High Score would be displayed under the Save High Score
   Button. If user scores more than the high score and saves the score, then that particular high score would be stored
   for the user.
-  
+
 ### `src/react-app/`
 
 This directory contains the client side web application. The _code_ here isn't
