--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -30,25 +30,31 @@ import dayjs from "dayjs";
 import { courseConfig } from "../../courseConfig";
 
 {dayjs().isBefore(
-  calculateAbsoluteDate({ week: 2, day: "Friday", time: "17:00:00" }),
+calculateAbsoluteDate({ week: 2, day: "Friday", time: "17:00:00" }),
 ) && (
-  <Aside
-    type="caution"
-    title={`Interested in registering for ${courseConfig.courseName} in ${courseConfig.semester}?`}
-  >
-    If you're interested in registering for this class, you must have turned in
-    the first assignment due on the Friday of week 1. Anyone can turn this assignment in regardless of whether they are registered for the course: if you did and aren't in
-    the class yet,  follow the instructions on the <a href="/homeworks/homework-0/">homework 0</a> page to turn in the assignment. 
-  </Aside>
+
+<Aside
+  type="caution"
+  title={`Interested in registering for ${courseConfig.courseName} in ${courseConfig.semester}?`}
+>
+  If you're interested in registering for this class, you must have turned in
+  the first assignment due on the Friday of week 1. Anyone can turn this
+  assignment in regardless of whether they are registered for the course: if you
+  did and aren't in the class yet, follow the instructions on the{" "}
+  <a href="/homeworks/homework-0/">homework 0</a> page to turn in the
+  assignment.
+</Aside>
 )}
 
 {dayjs().isAfter(
-  calculateAbsoluteDate({ week: 16, day: "Friday", time: "17:00:00" }),
+calculateAbsoluteDate({ week: 16, day: "Friday", time: "17:00:00" }),
 ) && (
-  <Aside type="danger" title="This course has concluded.">
-    This is the course website for {courseConfig.semester} {courseConfig.courseName}. If you're seeing this
-    note, the course has concluded.
-  </Aside>
+
+<Aside type="danger" title="This course has concluded.">
+  This is the course website for {courseConfig.semester}{" "}
+  {courseConfig.courseName}. If you're seeing this note, the course has
+  concluded.
+</Aside>
 )}
 
 ## Class coordinates
@@ -64,8 +70,8 @@ This course is taught in person, location LC C1, 2:00pm - 3:15pm Tuesdays and Th
 
 Chris Kanich, ckanich@uic.edu  
 Drop-In Office Hours: 3:30-4:30pm Mondays and Tuesdays  
-Drop-In Hours location: CDRLC 4411  
+Drop-In Hours location: CDRLC 4411
 
-Graduate TA: Iman Deol  
+Graduate TA: Iman Deol, ideol@uic.edu  
 Drop-In Office Hours: 1:00pm-3:00pm Wednesdays  
 Drop-In Hours location: CDRLC 2404
