--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -69,7 +69,7 @@ This course is taught in person, location LC C1, 2:00pm - 3:15pm Tuesdays and Th
 ### Instructional Team
 
 Chris Kanich, ckanich@uic.edu  
-Drop-In Office Hours: 3:30-4:30pm Mondays and Tuesdays  
+Drop-In Office Hours: 4pm-5pm Mondays, 3:30-4:30pm Tuesdays  
 Drop-In Hours location: CDRLC 4411
 
 Graduate TA: Iman Deol, ideol@uic.edu  
