Hw2 updates (kickoff video) (#48)
* homework 2 changes

* release date update

* bonus test delete

* kickoff video link

* merge main to hw2Updates

---------

Co-authored-by: Imanjot Singh Deol <imandeol@email.com>

--- a/src/content/docs/homeworks/homework 2.mdx
+++ b/src/content/docs/homeworks/homework 2.mdx
@@ -4,7 +4,7 @@ description: React
 sidebar:
   order: 32
 notes: >-
-  Watch [the kickoff video](https://example.com) for help getting
+  Watch [the kickoff video](https://www.youtube.com/watch?v=GJQXchtwqug) for help getting
   started.
 relative_release:
   week: 4
@@ -95,7 +95,6 @@ machine" does not count as a valid excuse for failing tests in the autograder. *
 | **Updating an expense: updates the record and returns it**                                  | 10     |
 | **Updating an expense: returns error 404 if the record doesn't exist**                      | 10     |
 | **Deleting an expense: soft-deletes the record and returns success**                        | 10     |
-| **Bonus: CI Tests (Lint, Format, Typecheck)**                                               | 9      |
 
 ## Due date
 
