--- a/src/content/docs/homeworks/final project checkpoint 1.mdx
+++ b/src/content/docs/homeworks/final project checkpoint 1.mdx
@@ -1,16 +1,15 @@
 ---
-tentative: true
 title: Final Project checkpoint 1
 description: Precisely enumerate what you want your app to do
 sidebar:
   order: 21
 relative_release:
-  week: 4
-  day: Monday
+  week: 5
+  day: Wednesday
   time: '08:00:00'
 relative_due:
-  week: 6
-  day: 2
+  week: 7
+  day: Wednesday
 ---
 
 import { localizeTime, formatTime, calculateAbsoluteDate } from "../../../utils/dateUtils";
@@ -25,7 +24,7 @@ import { marked } from "marked"
 
 **Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-TLDR: submit [this form](https://forms.gle/FySzRBae1QJhUCs97) before the deadline.
+TLDR: submit [this form](https://forms.gle/FirVbJbCvsNqckmf6) before the deadline.
 
 
 This is the second checkpoint for your final project. For this deliverable you
@@ -44,7 +43,11 @@ is not "pay to win."
 
 ## Example from the costco scraper idea
 
-Recall the costco discount database idea I talked about in class. A reasonable deliverable for that would be:
+A previous year's project was a costco discount database. Think "price history" from [steamdb](https://steamdb.info/), but for Costco products. A stretch goal would be to build a "discount predictor" that keeps track of recurring discounts for an item, and informs the user when the next expected time is for something to go on sale.
+
+A sticking point with this project is that it requires creating a web scraper for costco deals, which I would *not* recommend you do, but if you have a really interesting idea and it requires a web scraper to get the data (and it isn't that much data / is unlikely to get blocked), then have at it.
+
+For this project, a reasonable deliverable for that would be:
 
 ### In the Github Issue
 
@@ -70,7 +73,7 @@ HTML page.
 The main deliverable is again a form, including each group member's netID in a
 comma-delimited list.
 
-[The form is here](https://forms.gle/FySzRBae1QJhUCs97).
+[The form is here](https://forms.gle/FirVbJbCvsNqckmf6).
 
 You will also need to provide a link to a GitHub issue. This issue must include
 each deliverable as a separate checklist item. This allows you to use this as a
