firebase directions update

--- a/src/content/docs/homeworks/homework 3.mdx
+++ b/src/content/docs/homeworks/homework 3.mdx
@@ -43,8 +43,8 @@ academic integrity policy in this course.
   1.  While adding disable Google Analytics and Google Gemini for the project.
   1.  On the project overview page, look-out for "+ Add App" under your project name and choose web.
   1.  Register your app by giving it a name. Do not setup Firebase hosting. Once done you will be shown Step 2: Add Firebase SDK.
-  1.  Copy the values inside the firebase config and paste them in `.env.example` and rename the file to `.env`.
-  1.  Replace the value of `default` in `.firebaserc.example` with your project id, and rename the file `.firebaserc`. Also, you can run `npm run emulators` command to login into your firebase account and choose your project id.
+  1.  Copy the values you get inside the firebase config and paste them in `.env` that you have in your repository. Only change the values, donot change the variable names.
+  1.  Replace the value of `default` in `.firebaserc.example` with your project id, and rename the file `.firebaserc`. You can find the Project id the config values that you just got from Firebase. Also, you can run `npm run emulators` command to login into your firebase account and choose your project id.
 
 - Make sure you have Java installed on your system. This is required for running Firebase emulator.
 - Open the terminal window and type in `npm install`. This will install all the dependencies listed in the `package.json` file and will create a folder `node_modules` where all these dependencies will be installed.
