--- a/src/content/docs/homeworks/final project checkpoint 2.mdx
+++ b/src/content/docs/homeworks/final project checkpoint 2.mdx
@@ -8,7 +8,7 @@ relative_release:
   week: 7
   day: Monday
 relative_due:
-  week: 9
+  week: 10
   day: 2
   time: '08:00:00'
 ---
@@ -24,7 +24,7 @@ import { marked } from "marked"
 
 **Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-TLDR: submit [this form](https://forms.gle/9vWfqfpUCJ4p9bBK7) before the deadline.
+TLDR: submit [this form](https://forms.gle/swzkHpgYTT8ntQ727) before the deadline.
 
 
 ### What to submit
