--- a/src/content/docs/homeworks/final project checkpoint 2.mdx
+++ b/src/content/docs/homeworks/final project checkpoint 2.mdx
@@ -1,5 +1,5 @@
 ---
-tentative: true
+tentative: false
 title: Final Project checkpoint 2
 description: Precisely enumerate what you want your app to do
 sidebar:
