--- a/src/content/docs/homeworks/final project checkpoint 2.mdx
+++ b/src/content/docs/homeworks/final project checkpoint 2.mdx
@@ -1,7 +1,7 @@
 ---
 tentative: false
 title: Final Project checkpoint 2
-description: Precisely enumerate what you want your app to do
+description: Define your Minimum Viable Project
 sidebar:
   order: 22
 relative_release:
@@ -31,14 +31,14 @@ TLDR: submit [this form](https://forms.gle/swzkHpgYTT8ntQ727) before the deadlin
 
 For this deliverable you must describe, as precisely as possible, the specific architecture that your app will use. If you'll be using any particular framework, library, database, software as a service, etc, identify it and show where it fits into your overall architecture.
 
-You must also specifically describe the **minimum viable product** list of functionalities that you expect to have done by Checkpoint 3 (which will be due Friday, November 15th), which should be (a) a subset of your full project as described in checkpoint 1 and (b) should be chosen to exercise the most important parts of your architecture. In other words, don't get the front end and user authentication and profile pictures done but not (insert your app's unique interesting functionality) - make sure whatever makes your app unique is part of the minimum viable product. As always, post on Piazza or come to OH if you're having trouble deciding what to commit to finishing by checkpoint 3.
+You must also specifically describe the **minimum viable project** list of functionalities that you expect to have done by Checkpoint 3 (which will be due in week 13), which should be (a) a subset of your full project as described in checkpoint 1 and (b) should be chosen to exercise the most unique parts of your project. In other words, don't get the front end and user authentication and profile pictures done but not (insert your app's unique interesting functionality) - make sure whatever makes your app unique is part of the minimum viable project. As always, post on Piazza or come to OH if you're having trouble deciding what to commit to finishing by checkpoint 3.
 
 When creating your architecture diagram, I suggest using excalidraw and providing a link to that diagram, but you don't need to if you feel you can adequately describe your architecture without it.
 
 
 ### What happens if you don't turn in the checkpoint?
 
-Nothing besides the MVP (due in week 12) and the final project (due at the end
+Nothing besides the MVP (due in week 13) and the final project (due at the end
 of week 15) are graded for points. The things that you propose in each
 checkpoint set expectations for what your group will do and how you'll do it. If
 you don't set those expectations, I'll just grade everything based on what I
