--- a/src/content/docs/homeworks/final project MVP.mdx
+++ b/src/content/docs/homeworks/final project MVP.mdx
@@ -8,8 +8,8 @@ relative_release:
   week: 10
   day: Monday
 relative_due:
-  week: 12
-  day: 2
+  week: 13
+  day: Wednesday
   time: '23:59:59'
 ---
 
@@ -37,5 +37,3 @@ For this deliverable, you're responsible for three core things:
 # Your deliverable is a deployed website
 
 Rather than testing code, we will be testing a deployed website for this deliverable. This means that while you can continue to work on your app after the deadline, **we can perform our testing at any time, and if your app is in a broken state in production when we test it, you will get the points that that version of the site earns**. In other words, if you wish to continue working on your app after the deadline, you ABSOLUTELY MUST work on new features on a branch besides the main deployed branch (or you can submit a "mvp" branch deploy), and if you do want to push "improvements" to the version that I grade, make darn sure that you've tested it thoroughly before doing so.
-
-
